@@ -3003,6 +3003,267 @@ name|a
 argument_list|)
 expr_stmt|;
 block|}
+annotation|@
+name|Test
+specifier|public
+name|void
+name|testAliasOrder
+parameter_list|()
+block|{
+comment|// test that all table aliases are correct
+name|List
+argument_list|<
+name|Object
+index|[]
+argument_list|>
+name|result
+init|=
+name|ObjectSelect
+operator|.
+name|columnQuery
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|,
+name|Artist
+operator|.
+name|PAINTING_ARRAY
+operator|.
+name|outer
+argument_list|()
+operator|.
+name|count
+argument_list|()
+argument_list|,
+name|Property
+operator|.
+name|createSelf
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+argument_list|,
+name|Artist
+operator|.
+name|PAINTING_ARRAY
+operator|.
+name|dot
+argument_list|(
+name|Painting
+operator|.
+name|PAINTING_TITLE
+argument_list|)
+argument_list|,
+name|Property
+operator|.
+name|createSelf
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+argument_list|,
+name|Artist
+operator|.
+name|PAINTING_ARRAY
+operator|.
+name|dot
+argument_list|(
+name|Painting
+operator|.
+name|TO_GALLERY
+argument_list|)
+operator|.
+name|dot
+argument_list|(
+name|Gallery
+operator|.
+name|GALLERY_NAME
+argument_list|)
+argument_list|,
+name|Artist
+operator|.
+name|ARTIST_NAME
+argument_list|,
+name|Property
+operator|.
+name|createSelf
+argument_list|(
+name|Artist
+operator|.
+name|class
+argument_list|)
+argument_list|)
+operator|.
+name|select
+argument_list|(
+name|context
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|21
+argument_list|,
+name|result
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|Object
+index|[]
+name|next
+range|:
+name|result
+control|)
+block|{
+name|long
+name|count
+init|=
+operator|(
+name|Long
+operator|)
+name|next
+index|[
+literal|0
+index|]
+decl_stmt|;
+name|Artist
+name|artist
+init|=
+operator|(
+name|Artist
+operator|)
+name|next
+index|[
+literal|1
+index|]
+decl_stmt|;
+name|String
+name|paintingTitle
+init|=
+operator|(
+name|String
+operator|)
+name|next
+index|[
+literal|2
+index|]
+decl_stmt|;
+name|Artist
+name|artist2
+init|=
+operator|(
+name|Artist
+operator|)
+name|next
+index|[
+literal|3
+index|]
+decl_stmt|;
+name|String
+name|galleryName
+init|=
+operator|(
+name|String
+operator|)
+name|next
+index|[
+literal|4
+index|]
+decl_stmt|;
+name|String
+name|artistName
+init|=
+operator|(
+name|String
+operator|)
+name|next
+index|[
+literal|5
+index|]
+decl_stmt|;
+name|Artist
+name|artist3
+init|=
+operator|(
+name|Artist
+operator|)
+name|next
+index|[
+literal|6
+index|]
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|paintingTitle
+operator|.
+name|startsWith
+argument_list|(
+literal|"painting"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|count
+operator|==
+literal|4L
+operator|||
+name|count
+operator|==
+literal|5L
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"tate modern"
+argument_list|,
+name|galleryName
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|PersistenceState
+operator|.
+name|COMMITTED
+argument_list|,
+name|artist
+operator|.
+name|getPersistenceState
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|PersistenceState
+operator|.
+name|COMMITTED
+argument_list|,
+name|artist2
+operator|.
+name|getPersistenceState
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|PersistenceState
+operator|.
+name|COMMITTED
+argument_list|,
+name|artist3
+operator|.
+name|getPersistenceState
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 comment|/*      *  Test iterated select      */
 annotation|@
 name|Test
